<resources>
    <string name="app_name">Foo Bar</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="foobar">FooBar</string>
    <string name="login_btnSignup">Create new account</string>
    <string name="signup_btn_submit">Submit form</string>
    <string name="Signup_password_verification">Password verification</string>
    <string name="Signup_display_name">display name</string>
    <string name="Signup_upload_photo">Upload photo</string>
    <string name="_11_hrs">11 hrs</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="name">John Doe</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="view_friends">View Friends</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="see_friend_requests">See Friend Requests</string>
    <string name="profile">Profile</string>
    <string name="base_url">http://192.168.1.250:12345/api/</string>
    <string name="edit_display_name">display name: </string>
    <string name="edit_password">password: </string>
</resources>