<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Profile Picture -->

    <!-- User's Name -->


    <!-- Buttons -->
    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="profile_username_placeholder"
        android:textSize="18sp" />

    <!-- Add Friend / Friends Button -->
    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="add friend"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/view_friends_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_friends"
            android:layout_marginStart="3dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/delete_profile_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_profile"
            android:layout_marginStart="3dp"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_profile"
            android:layout_marginStart="3dp"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/see_friend_requests_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/see_friend_requests"
            android:layout_marginStart="3dp"
            android:textSize="10.5sp"/>
    </LinearLayout>

    <!-- List of Posts -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>


</LinearLayout>